# minisat

./: .gitignore  .gitmodules  CMakeLists.txt  README  init.sh  playground.cc
acctest/: Makefile  acc.cc  acc.h  assign_wrap.h  assign_wrap_test.cc  catch.hpp
core/: Main.cc  Makefile  Solver.cc  Solver.h  Solver.or  SolverTypes.h  acc.cc  acc.h  assign_wrap.cc  assign_wrap.h  assign_wrap.or  assign_wrap_test.bak  assign_wrap_test.cc  cache_wrap.cc  cache_wrap.h  cache_wrap.or  config_new.conf  config_w16_c_vary.conf  config_w32_c_vary.conf  depend.mk  event.h  event_queue.h  get_config.sh  get_data.awk  get_data.sh  m_config.conf  m_config_new_module.conf  m_config_w_scale.conf  read_config.cc  run.py  sim_control.h  tools.h
mtl/: Alloc.h  Heap.h  Vec.h  template.mk
test/: Makefile  clause_allocator_test.cc  main_test.cc  occ_test.cc  second_test.cc  solver_test.cc  vec_test.cc
utils/: Options.or  System.or
